--- a/Files11.vcxproj
+++ b/Files11.vcxproj
@@ -20,11 +20,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Files11.cpp" />
+    <ClCompile Include="src\Files11Base.cpp" />
+    <ClCompile Include="src\Files11FileSystem.cpp" />
+    <ClCompile Include="src\Files11HomeBlock.cpp" />
     <ClCompile Include="src\Files11Record.cpp" />
     <ClCompile Include="src\ProductInfo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Files11Base.h" />
+    <ClInclude Include="include\Files11FileSystem.h" />
+    <ClInclude Include="include\Files11HomeBlock.h" />
     <ClInclude Include="include\Files11Record.h" />
+    <ClInclude Include="include\Files11_defs.h" />
     <ClInclude Include="include\ProductInfo.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
