Build File Database complete (not fully tested).

--- a/Files11.vcxproj
+++ b/Files11.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="src\Files11.cpp" />
     <ClCompile Include="src\Files11Base.cpp" />
     <ClCompile Include="src\Files11FileSystem.cpp" />
+    <ClCompile Include="src\Files11Header.cpp" />
     <ClCompile Include="src\Files11HomeBlock.cpp" />
     <ClCompile Include="src\Files11Record.cpp" />
     <ClCompile Include="src\ProductInfo.cpp" />
@@ -29,6 +30,7 @@
   <ItemGroup>
     <ClInclude Include="include\Files11Base.h" />
     <ClInclude Include="include\Files11FileSystem.h" />
+    <ClInclude Include="include\Files11Header.h" />
     <ClInclude Include="include\Files11HomeBlock.h" />
     <ClInclude Include="include\Files11Record.h" />
     <ClInclude Include="include\Files11_defs.h" />
