--- a/Files11.vcxproj.filters
+++ b/Files11.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\Files11Base.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Files11Header.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Files11Record.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Files11Base.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Files11Header.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
