Improved dir command

--- a/Files11.vcxproj.filters
+++ b/Files11.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\Files11Header.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Files11FCS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Files11Record.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Files11Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Files11FCS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
