--- a/Files11.vcxproj
+++ b/Files11.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="src\Files11.cpp" />
     <ClCompile Include="src\Files11Base.cpp" />
+    <ClCompile Include="src\Files11FCS.cpp" />
     <ClCompile Include="src\Files11FileSystem.cpp" />
     <ClCompile Include="src\Files11Header.cpp" />
     <ClCompile Include="src\Files11HomeBlock.cpp" />
@@ -29,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Files11Base.h" />
+    <ClInclude Include="include\Files11FCS.h" />
     <ClInclude Include="include\Files11FileSystem.h" />
     <ClInclude Include="include\Files11Header.h" />
     <ClInclude Include="include\Files11HomeBlock.h" />
