--- a/Files11.vcxproj
+++ b/Files11.vcxproj
@@ -19,24 +19,24 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\BitCounter.cpp" />
     <ClCompile Include="src\DirDatabase.cpp" />
     <ClCompile Include="src\FileDatabase.cpp" />
     <ClCompile Include="src\Files11.cpp" />
     <ClCompile Include="src\Files11Base.cpp" />
     <ClCompile Include="src\Files11FCS.cpp" />
     <ClCompile Include="src\Files11FileSystem.cpp" />
-    <ClCompile Include="src\Files11Header.cpp" />
     <ClCompile Include="src\Files11HomeBlock.cpp" />
     <ClCompile Include="src\Files11Record.cpp" />
     <ClCompile Include="src\ProductInfo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\BitCounter.h" />
     <ClInclude Include="include\DirDatabase.h" />
     <ClInclude Include="include\FileDatabase.h" />
     <ClInclude Include="include\Files11Base.h" />
     <ClInclude Include="include\Files11FCS.h" />
     <ClInclude Include="include\Files11FileSystem.h" />
-    <ClInclude Include="include\Files11Header.h" />
     <ClInclude Include="include\Files11HomeBlock.h" />
     <ClInclude Include="include\Files11Record.h" />
     <ClInclude Include="include\Files11_defs.h" />
