Added VarLengthRecord class and unit test

--- a/Files11.vcxproj.filters
+++ b/Files11.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\BitCounter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\VarLengthRecord.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Files11Record.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\BitCounter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\VarLengthRecord.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
