--- a/Files11.vcxproj.filters
+++ b/Files11.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\VarLengthRecord.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\FixedLengthRecord.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Files11Record.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\VarLengthRecord.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\FixedLengthRecord.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
