Move Help to its own class

--- a/Files11.vcxproj
+++ b/Files11.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="src\Files11HomeBlock.cpp" />
     <ClCompile Include="src\Files11Record.cpp" />
     <ClCompile Include="src\FixedLengthRecord.cpp" />
+    <ClCompile Include="src\HelpUtil.cpp" />
     <ClCompile Include="src\ProductInfo.cpp" />
     <ClCompile Include="src\VarLengthRecord.cpp" />
   </ItemGroup>
@@ -43,6 +44,7 @@
     <ClInclude Include="include\Files11Record.h" />
     <ClInclude Include="include\Files11_defs.h" />
     <ClInclude Include="include\FixedLengthRecord.h" />
+    <ClInclude Include="include\HelpUtil.h" />
     <ClInclude Include="include\ProductInfo.h" />
     <ClInclude Include="include\VarLengthRecord.h" />
     <ClInclude Include="resource.h" />
